--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        
+        <div class="container">
+            <div class="header">
+                <div class="nav">
+                    <ul>
+                        <li class="navItem"><a href="#">About</a></li>
+                        <li class="navItem"><a href="#">Projects</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
         <script src="" async defer></script>
     </body>
 </html>
